Bump author width to 130px to fix jumpiness.

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -556,7 +556,7 @@ a.button, button
           vertical-align: top
           white-space: nowrap
           text-align: right
-          width: 125px
+          width: 130px
           b.blockquote_tail
             margin: 0 0 0 5px
             display: inline-block
